bindings/c/include/proven.h


typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
typedef struct { int32_t status; bool value; } ProvenBoolResult;
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
void proven_free_string(char* ptr);
int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
uint32_t proven_ffi_abi_version(void);
uint32_t proven_version_major(void);
uint32_t proven_version_minor(void);
uint32_t proven_version_patch(void);
uint32_t proven_module_count(void);
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
typedef struct {
    char*    scheme;       size_t scheme_len;
    char*    host;         size_t host_len;
    uint16_t port;         bool   has_port;
    char*    path;         size_t path_len;
    char*    query;        size_t query_len;
    char*    fragment;     size_t fragment_len;
} ProvenUrlComponents;
typedef struct {
    int32_t             status;
    ProvenUrlComponents components;
} ProvenUrlResult;
ProvenUrlResult proven_url_parse(const uint8_t* ptr, size_t len);
void proven_url_free(ProvenUrlComponents* components);
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
typedef struct { uint8_t octets[4]; } ProvenIPv4Address;
typedef struct {
    int32_t          status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
ProvenStringResult proven_header_render(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len
);
ProvenStringResult proven_header_build_csp(const uint8_t* directives_json, size_t json_len);
ProvenStringResult proven_header_build_hsts(int64_t max_age, bool include_subdomains, bool preload);
typedef struct {
    const uint8_t* domain;       size_t domain_len;
    const uint8_t* path;         size_t path_len;
    int64_t        max_age;      
    bool           secure;
    bool           http_only;
    ProvenSameSite same_site;
    bool           partitioned;
} ProvenCookieAttributes;
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_cookie_validate_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_cookie_validate_value(const uint8_t* ptr, size_t len);
ProvenIntResult proven_cookie_get_prefix(const uint8_t* ptr, size_t len);
ProvenStringResult proven_cookie_build_set_cookie(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len,
    ProvenCookieAttributes attrs
);
ProvenStringResult proven_cookie_build_delete(const uint8_t* name_ptr, size_t name_len);
typedef enum {
    PROVEN_CHARSET_UTF8        = 0,
    PROVEN_CHARSET_UTF16LE     = 1,
    PROVEN_CHARSET_UTF16BE     = 2,
    PROVEN_CHARSET_ISO8859_1   = 3,
    PROVEN_CHARSET_ASCII       = 4,
    PROVEN_CHARSET_WINDOWS1252 = 5,
    PROVEN_CHARSET_OTHER       = 6
} ProvenCharset;
typedef struct {
    int32_t            status;
    char*              media_type;     size_t media_type_len;
    char*              subtype;        size_t subtype_len;
    char*              suffix;         size_t suffix_len;
    ProvenMediaCategory category;
    ProvenCharset       charset;
    bool                has_charset;
} ProvenContentTypeResult;
ProvenContentTypeResult proven_content_type_parse(const uint8_t* ptr, size_t len);
void proven_content_type_free(ProvenContentTypeResult* result);
ProvenBoolResult proven_content_type_can_sniff_dangerous(const uint8_t* ptr, size_t len);
ProvenStringResult proven_content_type_render(
    const uint8_t* type_ptr, size_t type_len,
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len,
    ProvenCharset charset, bool has_charset
);